--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <a href="#"><span>Group 7</span> CC0002 : 23-24 S2</a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Initial Prompt</a></li>
-                <li><a href="projects.html">Final Prompt</a></li>
-                <li><a href="experience.html">How it changed</a></li>
+                <li><a href="#">Initial Prompt</a></li>
+                <li><a href="final.html">Final Prompt</a></li>
+                <li><a href="how.html">Why it changed</a></li>
                 <li><a href="#">Video</a></li>
             </ul>
             <div class="burger">
@@ -29,10 +29,10 @@
                 <div class="line3"></div>
             </div>
         <ul class="dropdown-menu"> <!-- New <ul> element -->
-            <li><a href="">Initial Prompt</a></li>
-            <li><a href="projects.html">Final Prompt</a></li>
-            <li><a href="experience.html">How it changed</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="#">Initial Prompt</a></li>
+            <li><a href="fake.html">Final Prompt</a></li>
+            <li><a href="how.html">Why it changed</a></li>
+            <li><a href="#">Video</a></li>
         </ul>
         </nav>
     </header>
