--- a/how.html
+++ b/how.html
@@ -20,7 +20,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Initial Prompt</a></li>
                 <li><a href="final.html">Final Prompt</a></li>
-                <li><a href="">How it changed</a></li>
+                <li><a href="">Why it changed</a></li>
                 <li><a href="#">Video</a></li>
             </ul>
             <div class="burger">
@@ -73,7 +73,7 @@
 
     <footer>
         <p>&copy; Nanyang Technological University 2024</p>
-        <p>Created by Akshay Narayanan Balajee Viswanath</p>
+        <p>Created By :  Akshay Narayanan Balajee Viswanath</p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/loaders/OBJLoader.js"></script>
