--- a/final.html
+++ b/final.html
@@ -20,7 +20,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Initial Prompt</a></li>
                 <li><a href="final.html">Final Prompt</a></li>
-                <li><a href="">Why it changed</a></li>
+                <li><a href="how.html">Why it changed</a></li>
                 <li><a href="#">Video</a></li>
             </ul>
             <div class="burger">
@@ -31,19 +31,19 @@
         <ul class="dropdown-menu"> <!-- New <ul> element -->
             <li><a href="index.html">Initial Prompt</a></li>
             <li><a href="final.html">Final Prompt</a></li>
-            <li><a href="#">How it changed</a></li>
+            <li><a href="how.html">How it changed</a></li>
             <li><a href="#">Video</a></li>
         </ul>
         </nav>
     </header>
 
     <main>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
         <section id="projects" class="projects">
+            <h2> </h2>
+            <h2> </h2>
             <div class="project-container">
                 <div class="project-card">
                   <p></p>
