--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         <ul class="dropdown-menu"> <!-- New <ul> element -->
             <li><a href="#">Initial Prompt</a></li>
-            <li><a href="fake.html">Final Prompt</a></li>
+            <li><a href="final.html">Final Prompt</a></li>
             <li><a href="how.html">Why it changed</a></li>
             <li><a href="#">Video</a></li>
         </ul>
