--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#">Initial Prompt</a></li>
             <li><a href="final.html">Final Prompt</a></li>
             <li><a href="how.html">Why it changed</a></li>
-            <li><a href="#">Video</a></li>
+            <li><a href="https://streamable.com/0a8pis">Video</a></li>
         </ul>
         </nav>
     </header>
