--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <li><a href="#">Initial Prompt</a></li>
             <li><a href="final.html">Final Prompt</a></li>
             <li><a href="how.html">Why it changed</a></li>
-            <li><a href="https://streamable.com/0a8pis">Video</a></li>
+            <li><a href="#">Video</a></li>
         </ul>
         </nav>
     </header>
@@ -57,7 +57,7 @@
                         The story pauses and rewinds back to the beginning with the narrator saying “what if Jeremy had a tool that could help him verify the news he receives without wasting too much time. This time round, when jeremy receives a notification from the various online websites he is subscribed to, ‘TruthGuard’, a browser extension pops up and informs him that. The news of godzilla treading the waters of Singapore is 85% unreliable and thus likely to be false. Jeremy thus sighs a heave of relief and continues on with his day.
                         As he continues with the day, Jeremy suddenly feels the ground rumble and King King appears outside his window. He screams and the story pauses. The Narrator t says "Our software tells you when something is not true, but doesn't tell you where you can find the truth."</p>
                     <p>Watch the initial video here!</p>
-                    <a href="coursework.html" class="btn">Watch</a>
+                    <a href="https://streamable.com/0a8pis" class="btn">Watch</a>
                 </div>
             </div>
         </section>
