--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#">Initial Prompt</a></li>
                 <li><a href="final.html">Final Prompt</a></li>
                 <li><a href="how.html">Why it changed</a></li>
-                <li><a href="#">Video</a></li>
+                <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
@@ -32,7 +32,7 @@
             <li><a href="#">Initial Prompt</a></li>
             <li><a href="final.html">Final Prompt</a></li>
             <li><a href="how.html">Why it changed</a></li>
-            <li><a href="#">Video</a></li>
+            <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
         </ul>
         </nav>
     </header>
