--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <a href="#"><span>Group 7</span>  CC0002 : 23-24 S2</a>
             </div>
             <ul class="nav-links">
-                <li><a href="#">Initial Prompt</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="initial.html">Initial Prompt</a></li>
                 <li><a href="final.html">Final Prompt</a></li>
                 <li><a href="how.html">Why it changed</a></li>
                 <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
@@ -29,7 +30,8 @@
                 <div class="line3"></div>
             </div>
         <ul class="dropdown-menu"> <!-- New <ul> element -->
-            <li><a href="#">Initial Prompt</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="initial.html">Initial Prompt</a></li>
             <li><a href="final.html">Final Prompt</a></li>
             <li><a href="how.html">Why it changed</a></li>
             <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
@@ -50,14 +52,12 @@
         <section id="about" class="about">
             <div class="container">
                 <div class="about-content">
-                    <h2>Initial Prompt</h2>
-                    <p>Create an animation with this prompt.
-                        There's a guy named Jeremy who  lives in Singapore. He is an 35 year-old office worker who does not have spare time outside of his work. He absorbs all the news that is sent through his subscription services on various news outlets and online websites. He does not have the thought or time to fact check any sort of news sent to him while he is working.
-                        One fine day, while using his laptop, he sees the news of godzilla in Singapore. Without a sense of doubt, he panics calls up his family and friends to inform them of the news. Due to his credentials in his job and usual reliable personality, his friends and family also believes the news and the spread of godzilla treading the waters of Singapore begins to spread. After a few days, he received a call from the authorities informing him of his behavior in spreading fake news. Then, he finally realizes that the news he sent to his friends and family about godzilla was fake. Though it was out of concern, Jeremy made the crucial mistake of not fact checking the information he receives, believes and shares. If was a fine lesson he had learnt.
-                        The story pauses and rewinds back to the beginning with the narrator saying “what if Jeremy had a tool that could help him verify the news he receives without wasting too much time. This time round, when jeremy receives a notification from the various online websites he is subscribed to, ‘TruthGuard’, a browser extension pops up and informs him that. The news of godzilla treading the waters of Singapore is 85% unreliable and thus likely to be false. Jeremy thus sighs a heave of relief and continues on with his day.
-                        As he continues with the day, Jeremy suddenly feels the ground rumble and King King appears outside his window. He screams and the story pauses. The Narrator t says "Our software tells you when something is not true, but doesn't tell you where you can find the truth."</p>
-                    <p>Watch the initial video here!</p>
-                    <a href="https://streamable.com/0a8pis" class="btn">Watch</a>
+                    <h2>A Novelle solution for fake news</h2>
+                    <p>
+                        Our project aims to develop a browser extension for assessing the credibility of news articles. Using a trained neural network (NN) model with around 83% accuracy, the extension scans web page text to predict the likelihood of information being true. It offers credibility indicators, like a color-coded score or label, to guide users. The extension is designed to work across popular browsers like Chrome, Firefox, and Edge. Our next steps include implementing the NN model, creating a user-friendly interface, thorough testing, user feedback, and ensuring compliance with security and privacy standards. The final product will be released through official browser extension stores, with the goal of helping users navigate news content more confidently.
+                    </p>
+                    <p>Tag along to see it's creation!</p>
+                    <a href="https://github.com/NarayanAkshay11/SC1015-DSAI-FinalProject" class="btn">See the DL Model</a>
                 </div>
             </div>
         </section>
