--- a/initial.html
+++ b/initial.html
@@ -1,5 +1,79 @@
-Create an animation with this prompt. There's a guy named Jeremy who lives in Singapore. He is an 35 year-old office worker who does not have spare time outside of his work. He absorbs all the news that is sent through his subscription services on various news outlets and online websites. He does not have the thought or time to fact check any sort of news sent to him while he is working. One fine day, while using his laptop, he sees the news of godzilla in Singapore. Without a sense of doubt, he panics calls up his family and friends to inform them of the news. Due to his credentials in his job and usual reliable personality, his friends and family also believes the news and the spread of godzilla treading the waters of Singapore begins to spread. After a few days, he received a call from the authorities informing him of his behavior in spreading fake news. Then, he finally realizes that the news he sent to his friends and family about godzilla was fake. Though it was out of concern, Jeremy made the crucial mistake of not fact checking the information he receives, believes and shares. If was a fine lesson he had learnt. The story pauses and rewinds back to the beginning with the narrator saying “what if Jeremy had a tool that could help him verify the news he receives without wasting too much time. This time round, when jeremy receives a notification from the various online websites he is subscribed to, ‘TruthGuard’, a browser extension pops up and informs him that. The news of godzilla treading the waters of Singapore is 85% unreliable and thus likely to be false. Jeremy thus sighs a heave of relief and continues on with his day. As he continues with the day, Jeremy suddenly feels the ground rumble and King King appears outside his window. He screams and the story pauses. The Narrator t says "Our software tells you when something is not true, but doesn't tell you where you can find the truth."
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Truth Guard</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="img/cskk.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-DePn4wRVrO+r+8tH2RiQjgMSzLb/bzrX7qwnKp3biQNpD3J5rIaBfZV7yDnjIT+o" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ysabeau+Office:ital,wght@0,1..1000;1,1..1000&display=swap" rel="stylesheet">
+</head>
+<body>
+   <header>
+        <nav>
+            <div class="logo">
+                <a href="#"><span>Truth Guard</span>  Browser Extension</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Initial Prompt</a></li>
+                <li><a href="final.html">Final Prompt</a></li>
+                <li><a href="how.html">Why it changed</a></li>
+                <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        <ul class="dropdown-menu"> <!-- New <ul> element -->
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Initial Prompt</a></li>
+            <li><a href="final.html">Final Prompt</a></li>
+            <li><a href="how.html">How it changed</a></li>
+            <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
+        </ul>
+        </nav>
+    </header>
 
-Watch the initial video here!
+    <main>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <section id="projects" class="projects">
+            <h2> </h2>
+            <h2> </h2>
+            <div class="project-container">
+                <div class="project-card">
+                  <p></p>
+                    <div class="project-details">
+                        <h3>Initial Prompt</h3>
+                        <p>
+                          Create an animation with this prompt. There's a guy named Jeremy who lives in Singapore. 
+                          He is an 35 year-old office worker who does not have spare time outside of his work. 
+                          He absorbs all the news that is sent through his subscription services on various news outlets and online websites. 
+                          He does not have the thought or time to fact check any sort of news sent to him while he is working. 
+                          One fine day, while using his laptop, he sees the news of godzilla in Singapore. 
+                          Without a sense of doubt, he panics calls up his family and friends to inform them of the news. 
+                          Due to his credentials in his job and usual reliable personality, his friends and family also believes the news and the spread of godzilla treading the waters of Singapore begins to spread. After a few days, he received a call from the authorities informing him of his behavior in spreading fake news. Then, he finally realizes that the news he sent to his friends and family about godzilla was fake. Though it was out of concern, Jeremy made the crucial mistake of not fact checking the information he receives, believes and shares. If was a fine lesson he had learnt. The story pauses and rewinds back to the beginning with the narrator saying “what if Jeremy had a tool that could help him verify the news he receives without wasting too much time. This time round, when jeremy receives a notification from the various online websites he is subscribed to, ‘TruthGuard’, a browser extension pops up and informs him that. The news of godzilla treading the waters of Singapore is 85% unreliable and thus likely to be false. Jeremy thus sighs a heave of relief and continues on with his day. As he continues with the day, Jeremy suddenly feels the ground rumble and King King appears outside his window. He screams and the story pauses. The Narrator t says "Our software tells you when something is not true, but doesn't tell you where you can find the truth."
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        
+    </main>
 
+    <footer>
+        <p>&copy; Nanyang Technological University 2024</p>
+        <p>Created By : Akshay Narayanan Balajee Viswanath</p>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/loaders/OBJLoader.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
