--- a/final.html
+++ b/final.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Group 7 Stuff</title>
+    <title>Truth Guard</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="img/cskk.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-DePn4wRVrO+r+8tH2RiQjgMSzLb/bzrX7qwnKp3biQNpD3J5rIaBfZV7yDnjIT+o" crossorigin="anonymous">
@@ -15,10 +15,11 @@
    <header>
         <nav>
             <div class="logo">
-                <a href="#"><span>Group 7</span> CC0002 : 23-24 S2</a>
+                <a href="#"><span>Truth Guard</span>  Borwser Extension</a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Initial Prompt</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="initial.html">Initial Prompt</a></li>
                 <li><a href="final.html">Final Prompt</a></li>
                 <li><a href="how.html">Why it changed</a></li>
                 <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
@@ -29,7 +30,8 @@
                 <div class="line3"></div>
             </div>
         <ul class="dropdown-menu"> <!-- New <ul> element -->
-            <li><a href="index.html">Initial Prompt</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="initial.html">Initial Prompt</a></li>
             <li><a href="final.html">Final Prompt</a></li>
             <li><a href="how.html">How it changed</a></li>
             <li><a href="https://youtu.be/0u0J487zdak">Video</a></li>
