--- a/final.html
+++ b/final.html
@@ -15,7 +15,7 @@
    <header>
         <nav>
             <div class="logo">
-                <a href="#"><span>Truth Guard</span>  Borwser Extension</a>
+                <a href="#"><span>Truth Guard</span>  Browser Extension</a>
             </div>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
